<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#464646">


    <TextView
        android:id="@+id/textView3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"

        android:text="@string/Пол"
        android:textColor="@color/white"
        android:textColorHighlight="@color/purple_200"
        android:textColorHint="@color/white"
        android:textColorLink="@color/purple_500"
        android:textSize="16sp" />

    <CheckBox
        android:id="@+id/checkBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView3"

        android:layout_alignParentStart="true"
        android:checked="false"
        android:text="@string/Мужской"
        android:textColor="@color/white"
        android:textColorHighlight="@color/purple_200"
        android:textColorHint="@color/white"
        android:textColorLink="@color/purple_500"
        android:textSize="14sp" />

    <CheckBox
        android:id="@+id/checkBox3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView3"
        android:layout_alignParentEnd="true"
        android:layout_toEndOf="@+id/checkBox"
        android:text="@string/Женский"
        android:textColor="@color/white"
        android:textColorHighlight="@color/purple_200"
        android:textColorHint="@color/white"
        android:textSize="14sp" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/textView4"
        >

        <RadioButton
            android:id="@+id/radioButton1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/java"
            android:textColor="@color/white"
            android:textColorHighlight="@color/purple_700"
            android:textColorHint="@color/purple_500"
            android:textSize="16sp"
            app:useMaterialThemeColors="false" />

        <RadioButton
            android:id="@+id/radioButton2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/python"
            android:textColor="@color/white"
            android:textColorHighlight="@color/purple_700"
            android:textColorHint="@color/purple_500"
            android:textSize="14sp" />

        <RadioButton
            android:id="@+id/radioButton3"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginEnd="0dp"
            android:layout_marginBottom="0dp"
            android:text="@string/Cplusplus"
            android:textColor="@color/white"
            android:textColorHighlight="@color/purple_700"
            android:textColorHint="@color/purple_500"
            android:textSize="14sp" />

    </RadioGroup>

    <TextView
        android:id="@+id/textView4"
        android:layout_width="390dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/checkBox3"
        android:layout_alignParentStart="true"
        android:layout_centerHorizontal="true"
        android:text="@string/Язык"
        android:textColor="@color/white"
        android:textColorHighlight="@color/purple_700"
        android:textColorHint="@color/purple_500"
        android:textSize="16sp" />

    <Spinner
        android:id="@+id/spinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView5"
        android:layout_alignParentStart="true"
        android:entries="@array/seasons_arrays"
        android:minHeight="48dp" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/radioGroup"
        android:layout_centerHorizontal="true"
        android:text="@string/Время_Года"
        android:textColor="@color/white"
        android:textColorHighlight="@color/purple_700"
        android:textColorHint="@color/purple_500"
        android:textSize="16sp" />

    <Button
        android:id="@+id/buttonFinal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/button2"
        android:layout_centerHorizontal="true"
        android:onClick="onFinal"
        android:text="@string/Продолжить" />

    <Button
        android:id="@+id/button2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/spinner"
        android:layout_centerHorizontal="true"
        android:onClick="onBack"
        android:text="@string/Назад" />

</RelativeLayout>