<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#464646"
    xmlns:tools="http://schemas.android.com/tools">


    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:text="@string/Спасибо"
        android:textColor="@color/white"
        android:textColorHighlight="@color/purple_700"
        android:textColorHint="@color/purple_500"
        android:textSize="34sp" />

    <EditText
        android:id="@+id/editText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView8"
        android:ems="10"
        android:importantForAutofill="no"
        android:inputType="none"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@color/white"
        android:textColorHighlight="@color/purple_700"
        tools:ignore="LabelFor" />

    <Button
        android:id="@+id/button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="116dp"
        android:layout_marginEnd="119dp"
        android:layout_marginBottom="38dp"
        android:onClick="onExit"
        android:text="@string/Выход" />

    <Button
        android:id="@+id/button3"
        android:layout_width="174dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="127dp"
        android:onClick="onBack"
        android:text="@string/Назад" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView7"

        android:text="@string/Результаты"
        android:textColor="@color/white"
        android:textSize="20sp" />

</RelativeLayout>